# resourceMonitor

./: .gitignore  23.5.0.json  buildVars.py  changes.md  flake8.ini  manifest.ini.tpl  pyproject.toml  readme.md  readme.mdwn  resourceMonitor.xliff  sconstruct
.github/scripts/: checkTranslation.py  crowdinSync.ps1  languageMappings.json  setOutputs.py
.github/workflows/: crowdinL10n.yml  fetchTranslationsFromCrowdin.yaml
addon/: installTasks.py
addon/doc/ar/: readme.html  readme.md
addon/doc/bg/: readme.html  readme.md
addon/doc/da/: readme.html  readme.md
addon/doc/de/: readme.html  readme.md
addon/doc/en/: readme.html  readme.md
addon/doc/es/: readme.html  readme.md
addon/doc/fa/: readme.html  readme.md
addon/doc/fi/: readme.html  readme.md
addon/doc/fr/: readme.html  readme.md
addon/doc/gl/: readme.html  readme.md
addon/doc/hr/: readme.html  readme.md
addon/doc/hu/: readme.html  readme.md
addon/doc/it/: readme.html  readme.md
addon/doc/ja/: readme.html  readme.md
addon/doc/ko/: readme.html  readme.md
addon/doc/ne/: readme.html  readme.md
addon/doc/nl/: readme.html  readme.md
addon/doc/pl/: readme.html  readme.md
addon/doc/pt_BR/: readme.html  readme.md
addon/doc/pt_PT/: readme.html  readme.md
addon/doc/ro/: readme.html  readme.md
addon/doc/ru/: readme.html  readme.md
addon/doc/sk/: readme.html  readme.md
addon/doc/sl/: readme.html  readme.md
addon/doc/sr/: readme.html  readme.md
addon/doc/tr/: readme.html  readme.md
addon/doc/uk/: readme.html  readme.md
addon/doc/vi/: readme.html  readme.md
addon/doc/zh_CN/: readme.html  readme.md
addon/doc/zh_TW/: readme.html  readme.md
addon/globalPlugins/resourceMonitor/: __init__.py  battery.py  gpu.py  memory.py  networkSpeed.py  wlanapi.py
addon/globalPlugins/resourceMonitor/psutil/: __init__.py  _common.py  _compat.py  _psbsd.py  _pslinux.py  _psmswindows.py  _psosx.py  _psposix.py  _psutil_mswindows.pyd  _psutil_windows.cp310-win32.pyd  _psutil_windows.cp36-win32.pyd  _psutil_windows.cp37-win32.pyd  _psutil_windows.cp38-win32.pyd  _psutil_windows.cp39-win32.pyd  _psutil_windows.pyd
addon/globalPlugins/resourceMonitor/psutilpy2/: _psutil_windows.pyd
addon/locale/an/LC_MESSAGES/: nvda.po
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/bg/LC_MESSAGES/: nvda.po
addon/locale/da/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/de_CH/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/es_CO/LC_MESSAGES/: nvda.po
addon/locale/fa/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/gl/LC_MESSAGES/: nvda.po
addon/locale/he/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/hu/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/ja/LC_MESSAGES/: nvda.po
addon/locale/ko/LC_MESSAGES/: nvda.po
addon/locale/ne/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/pl/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ro/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/sk/LC_MESSAGES/: nvda.po
addon/locale/sl/LC_MESSAGES/: nvda.po
addon/locale/sr/LC_MESSAGES/: nvda.po
addon/locale/ta/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
addon/locale/vi/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
addon/locale/zh_TW/LC_MESSAGES/: nvda.po
site_scons/site_tools/NVDATool/: __init__.py  manifests.py  typings.py
