[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resourceMonitor"
dynamic = ["version"]
description = "Resource Monitor"
maintainers = [
	{name = "Joseph Lee", email = "joseph.lee22590@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.TXT"}
# This package is not installed as a library; every dependency is tooling used to
# build, translate, or lint the add-on. They are declared as PEP 735 dependency groups.
dependencies = []
[project.urls]
Repository = "https://github.com/nvaccess/addonTemplate"

# PEP 735 dependency groups. `uv sync` installs the `dev` group by default, which
# pulls in every tool needed to build, translate, and lint the add-on.
[dependency-groups]
# Build add-on
build = [
	"scons==4.10.1",
	"Markdown==3.10",
]
# Translations management
l10n = [
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.1.0",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
]
# Lint
lint = [
	"uv==0.11.15",
	"ruff==0.14.5",
	"prek==0.4.8",
	"pyright[nodejs]==1.1.407",
]
dev = [
	{ include-group = "build" },
	{ include-group = "l10n" },
	{ include-group = "lint" },
]

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
	"sconstruct",
]

exclude = [
	".git",
	"__pycache__",
]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]

[tool.ruff.lint.per-file-ignores]
# sconstruct contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]

[tool.pyright]
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	"sconstruct",
	".git",
	"__pycache__",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
	# WLAN API is a third-party module
	"addon/globalPlugins/resourceMonitor/wlanapi.py",
]

# Tell pyright where to load python code from
extraPaths = [
	"./addon",
]

# General config
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Stricter typing
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Compliant rules
reportAbstractUsage = true
reportArgumentType = true
reportAssertAlwaysTrue = true
reportAssertTypeFailure = true
reportAssignmentType = true
reportAttributeAccessIssue = true
reportCallInDefaultInitializer = true
reportCallIssue = true
reportConstantRedefinition = true
reportDeprecated = true
reportDuplicateImport = true
reportFunctionMemberAccess = true
reportGeneralTypeIssues = true
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportIncompleteStub = true
reportInconsistentConstructor = true
reportInconsistentOverload = true
reportIndexIssue = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeArguments = true
reportInvalidTypeForm = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportMissingParameterType = true
reportMissingSuperCall = true
reportMissingTypeArgument = true
reportNoOverloadImplementation = true
reportOperatorIssue = true
reportOptionalCall = true
reportOptionalContextManager = true
reportOptionalIterable = true
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportOverlappingOverload = true
reportPossiblyUnboundVariable = true
reportPrivateImportUsage = true
reportPropertyTypeMismatch = true
reportRedeclaration = true
reportReturnType = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportTypedDictNotRequiredAccess = true
reportUnhashable = true
reportUninitializedInstanceVariable = true
reportUnknownLambdaType = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnsupportedDunderAll = true
reportUntypedClassDecorator = true
reportUntypedNamedTuple = true
reportUnusedCallResult = true
reportUnusedClass = true
reportUnusedCoroutine = true
reportUnusedExcept = true
reportUnusedExpression = true
reportUnusedFunction = true
reportUnusedImport = true
reportUnusedVariable = true
reportWildcardImportFromLibrary = true

# Can be enabled by generating type stubs for modules via pyright CLI
reportMissingTypeStubs = false

# Bad rules
# These are sorted alphabetically and should be enabled and moved to compliant rules section when resolved.
reportImplicitOverride = false  # GPU provider class, resolved in Python 3.12 and later (NVDA 2026.x)
reportImplicitStringConcatenation = false  # Split lengthy script description onto separate lines
reportMissingImports = false  # NVDA Core modules
reportPrivateUsage = false  # _psutil_windows is part of psutil package
reportUnboundVariable = false  # WLAN module and info, memory size reporting
reportUndefinedVariable = false  # _ = gettext.gettext call, ngettext comes from gettext
reportUnknownArgumentType = false  # Battery, WLAN, and other resource usage reporting texts
reportUnknownMemberType  = false  # NVDA Core, psutil, WLAN module member types
reportUnknownParameterType = false  # WLAN data/array and script gesture
reportUnknownVariableType = false  # Tuple unpacking, third-party modules, unexpected variable types
reportUntypedBaseClass = false  # globalPluginHandler.GlobalPlugin comes from NVDA Core
reportUntypedFunctionDecorator = false  # scriptHandler.script decorator
